--- a/vignettes/lab_report_knapsack.Rmd
+++ b/vignettes/lab_report_knapsack.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "Knapsack Package"
+author: "Aqeel Ahmed, Marhawi Tewolde"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -9,50 +9,100 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+#Knapsack Package Introduction
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+The Knapsack Package implements methods for solving the knapsack problem with the application of functions:
 
-## Vignette Info
+1.brute_force_knapsack
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+2.knapsack_dynamic
 
-## Styles
+3.greedy_knapsack
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
 
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+#How to generate dataset
+```
+set.seed(42)
+n <- 2000
+knapsack_objects <-
+  data.frame(
+    w=sample(1:4000, size = n, replace = TRUE),
+    v=runif(n = n, 0, 10000)
+  )
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+#brute_force_knapsack
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+brute_force_knapsack implements a function where you call knapsack brute force(x, W) that takes a data.frame with two variables v and w and returns the maximum knapsack value and which elements (rows in the data.frame). Argument W is the knapsack size:
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
+```
+brute_force_knapsack(knapsack_objects[1:8,],3500)
+```
+```
+$value
+[1] 16770
 
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+$element
+[1] 5 8
 ```
 
-Also a quote using `>`:
+```
+Question: How long time does it takes to run the algorithm for n = 16 objects?
+system.time(brute_force_knapsack(knapsack_objects[1:16,],3500))
+   user  system elapsed 
+      0       0       0 
+```      
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+#knapsack_dynamic
+
+This function should return the same results as the brute force algorithm, but unlike the brute force it should scale much better.
+
+```
+knapsack_dynamic(knapsack_objects[1:8,],3500)
+```
+```
+$value
+[1] 16770
+
+$elements
+[1] 5 8
+```
+```
+Question: How long time does it takes to run the algorithm for n = 500 objects?
+
+system.time(knapsack_dynamic(knapsack_objects[1:500,],3500))
+   user  system elapsed 
+  18.98    0.08   19.16 
+```
+
+#greedy_knapsack
+
+This algorithm will not give an exact result (but it can be shown that it will return at least 50% of the true maximum value), but it will reduce the computational complexity considerably.
+
+```
+greedy_knapsack(knapsack_objects[1:8,],3500)
+```
+```
+$value
+[1] 15428
+
+$elements
+[1] 8 3
+```
+```
+Question: How long time does it takes to run the algorithm for n = 1000000 objects?
+
+set.seed(42)
+n <- 1000000
+knapsack_objects <-
+  data.frame(
+    w=sample(1:4000, size = n, replace = TRUE),
+    v=runif(n = n, 0, 10000)
+  )
+  
+system.time(greedy_knapsack(knapsack_objects[1:1000000,],3500))
+   user  system elapsed 
+   3.08    0.09    3.16   
+  
+```
